force-app/main/default/objects/Relevant_Locals__c/Relevant_Locals__c.object-meta.xml
<CustomObject>
    <label>מקומיים רלוונטיים</label>
    <nameField>
        <label>שם</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>מקומיים רלוונטיים</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>