force-app/main/default/objects/Relevant_Locals__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>הערות</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>