force-app/main/default/objects/Relevant_Locals__c/fields/Incident_Report__c.field-meta.xml
<CustomField>
    <fullName>Incident_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>כרטיס אירוע</label>
    <referenceTo>Incident_Report__c</referenceTo>
    <relationshipLabel>מקומיים רלוונטיים</relationshipLabel>
    <relationshipName>Relevant_Locals</relationshipName>
    <type>Lookup</type>
</CustomField>