force-app/main/default/objects/Relevant_Locals__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>תפקיד</label>
    <length>255</length>
    <type>Text</type>
</CustomField>