force-app/main/default/objects/Relevant_Locals__c/fields/Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture__c</fullName>
    <label>Profile Picture</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>